problems page design

--- a/src/app/modules/problems/components/study-plan-card/study-plan-card.component.scss
+++ b/src/app/modules/problems/components/study-plan-card/study-plan-card.component.scss
@@ -1,4 +1,30 @@
-@import url('../../pages/study-plan/colors.scss');
+@import 'app/colors/study-plans';
+@import 'bootstrap/scss/mixins/dark-layout';
+@import 'bootstrap/scss/mixins';
+
+.study-plan-1 .card {
+  background: linear-gradient(to right, lighten($study-plan-1, 5), lighten($study-plan-1, 25));
+
+  @include dark-layout {
+    background: linear-gradient(to right, darken($study-plan-1, 20), darken($study-plan-1, 10)) !important;
+  }
+}
+
+.study-plan-2 .card {
+  background: linear-gradient(to right, mix(white, $study-plan-2, 5), mix(white, $study-plan-2, 25));
+
+  @include dark-layout {
+    background: linear-gradient(to right, mix(black, $study-plan-2, 40), mix(black, $study-plan-2, 20)) !important;
+  }
+}
+
+.study-plan-3 .card {
+  background: linear-gradient(to right, mix(white, $study-plan-3, 5), mix(white, $study-plan-3, 25));
+
+  @include dark-layout {
+    background: linear-gradient(to right, mix(black, $study-plan-3, 25), mix(black, $study-plan-3, 10)) !important;
+  }
+}
 
 @keyframes cardAnimation {
   50% {
@@ -29,7 +55,6 @@ a {
   }
 
   .card {
-    background: var(--bg-gradient-study-plan);
     height: 100%;
     border: none;
 
