--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,22 +10,18 @@
 </ng-container>
 <!-- / horizontal-layout -->
 
-<!--
-  <core-sidebar
-    name="themeCustomizer"
-    class="customizer d-none d-md-block"
-    [invisibleOverlay]="true"
-    *ngIf="coreConfig.layout.customizer"
-  >
-    <a
-      class="customizer-toggle d-flex align-items-center justify-content-center"
-      (click)="toggleSidebar('themeCustomizer')"
-    >
-      <span [data-feather]="'settings'" [class]="'spinner'"></span>
-    </a>
-    <core-theme-customizer></core-theme-customizer>
-  </core-sidebar>
--->
+<!--<core-sidebar-->
+<!--  name="themeCustomizer"-->
+<!--  class="customizer d-none d-md-block"-->
+<!--&gt;-->
+<!--  <a-->
+<!--    class="customizer-toggle d-flex align-items-center justify-content-center"-->
+<!--    (click)="toggleSidebar('themeCustomizer')"-->
+<!--  >-->
+<!--    <span [data-feather]="'settings'" [class]="'spinner'"></span>-->
+<!--  </a>-->
+<!--  <core-theme-customizer></core-theme-customizer>-->
+<!--</core-sidebar>-->
 
 <ngx-loading-bar></ngx-loading-bar>
 
