--- a/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
@@ -1,28 +1,43 @@
-<div class="problems-section-info">
-  <a class="blog-card" routerLink="/learn/blog/post/52">
-    <div class="card">
-      <div class="card-header">
-        <div class="card-title">
-          {{ 'AboutProblems' | translate }}
-        </div>
+<div class="text-center">
+  <div [@fadeInUpOnEnter]
+       class="avatar avatar-lg badge-glow bg-primary p-50 m-0 mb-1">
+    <a class="text-white">
+      <div class="avatar-content">
+        <i [data-feather]="'problem' | iconName" class="font-large-1"></i>
       </div>
-  
-      <div class="card-img">
-        <img class="info-img" src="assets/images/pages/graphic-3.png" alt="">
+    </a>
+  </div>
+
+  <h2 [@fadeInUpOnEnter] class="mt-1 text-white">{{ 'Problems' | translate }}</h2>
+  <h5 [@fadeInUpOnEnter] class="mt-2 text-white">Practice and improve your skills</h5>
+
+  <div class="mt-4 col-lg-8 col-12 offset-lg-2 offset-0">
+    <div class="row">
+      <div class="col-12 col-md-6">
+        <a [@fadeInLeftOnEnter] class="card card-info" routerLink="/learn/blog/post/52">
+          <div class="card-header">
+            <div class="card-title">
+              {{ 'AboutProblems' | translate }}
+            </div>
+          </div>
+          <div class="info-img">
+            <img src="assets/images/pages/graphic-3.png" alt="info-img">
+          </div>
+        </a>
+      </div>
+
+      <div class="col-12 col-md-6">
+        <a [@fadeInRightOnEnter] class="card card-info" routerLink="/learn/blog/post/46">
+          <div class="card-header">
+            <div class="card-title">
+              {{ 'AboutVerdicts' | translate }}
+            </div>
+          </div>
+          <div class="info-img">
+            <img src="assets/images/pages/graphic-2.png" alt="info-img">
+          </div>
+        </a>
       </div>
     </div>
-  </a>
-  
-  <a class="blog-card" routerLink="/learn/blog/post/46">
-    <div class="card">
-      <div class="card-header">
-        <div class="card-title">
-          {{ 'AboutVerdicts' | translate }}
-        </div>
-      </div>
-      <div class="card-img">
-        <img class="info-img" src="assets/images/pages/graphic-2.png" alt="">
-      </div>
-    </div>
-  </a>
+  </div>
 </div>
