--- a/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.scss
+++ b/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.scss
@@ -1,47 +1,29 @@
-.blog-card {
+.card.card-info {
+  border: none;
+  opacity: 1;
+  height: 150px;
+  box-shadow: var(--inherit-bg-box-shadow) !important;
+  background: inherit !important;
+
   &:hover {
-    .card {
-      background: linear-gradient(to right, #6c72e0c5, #7c7affc7) !important;
-    }
+    transform: scale(1.05);
   }
 
-  .card {
-    border: none;
-    margin-bottom: 1rem;
-    height: 100px;
-    background: linear-gradient(to right, #6c72e0, #7c7aff);
+  .card-header .card-title {
+    color: #fff;
+  }
 
-    .card-header {
-      .card-title {
-        color: #fff;
-      }
-    }
+  .info-img {
+    position: absolute;
+    height: 120px;
+    width: 120px;
+    bottom: 0.5rem;
+    right: 0.5rem;
 
-    .card-img {
-      position: absolute;
-      height: 90px;
-      width: 90px;
-      bottom: 0rem;
-      right: 0rem;
-
-      img {
-        border-radius: 13px;
-        object-fit: cover;
-        height: 100%;
-        width: 100%;
-      }
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
   }
 }
-
-::ng-deep .dark-layout .problems-section-info .blog-card {
-  &:hover {
-    .card {
-      background: linear-gradient(to right, #182848ab, #4b6bb796) !important;
-    }
-  }
-
-  .card {
-    background: linear-gradient(to right, #182848, #4b6cb7) !important;
-  }
-}  
