--- a/src/app/modules/problems/pages/problems/sections/section-sidebar/section-sidebar.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-sidebar/section-sidebar.component.html
@@ -1,72 +1,73 @@
-<div *ngIf="currentUser">
+<div class="position-relative full-height" [perfectScrollbar]>
+  <div *ngIf="currentUser">
+    <div class="card">
+      <div class="card-header">
+        <div class="card-title">
+          {{ 'Activity' | translate }}
+        </div>
+        <div class="btn-group btn-group-toggle mt-md-0 mt-1" ngbRadioGroup name="radioBasic" [(ngModel)]="activityDays">
+          <label class="btn btn-sm btn-outline-primary" ngbButtonLabel rippleEffect>
+            <input (click)="activityDataUpdate(7)" type="radio" name="last_days_option" id="last_days_option_1"
+                   [value]="7" ngbButton />
+            <span>7</span>
+          </label>
+          <label class="btn btn-sm btn-outline-primary" ngbButtonLabel rippleEffect>
+            <input (click)="activityDataUpdate(14)" type="radio" name="last_days_option" id="last_days_option_2"
+                   [value]="14" ngbButton />
+            <span>14</span>
+          </label>
+          <label class="btn btn-sm btn-outline-primary" ngbButtonLabel rippleEffect>
+            <input (click)="activityDataUpdate(30)" type="radio" name="last_days_option" id="last_days_option_3"
+                   [value]="30" ngbButton />
+            <span>30</span>
+          </label>
+        </div>
+      </div>
+      <div class="card-body">
+        <div class="text-center mt-2 mb-2">
+          <div class="avatar bg-primary p-50 m-0 mb-1">
+            <div class="avatar-content">
+              <i data-feather="check-circle" class="font-medium-5"></i>
+            </div>
+          </div>
+          <h2 class="font-weight-bolder">{{ activitySolved }}</h2>
+          <p class="mb-0 line-ellipsis">{{ 'Problem' | translate }}</p>
+        </div>
+
+        <apex-chart *ngIf="activityChart" [options]="activityChart"></apex-chart>
+      </div>
+      <div class="card-footer text-center">
+        <a class="btn btn-primary bg-primary badge-glow btn-sm round" routerLink="profile">
+          {{ 'DetailedStatistics' | translate }}
+          <i data-feather="arrow-right"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
   <div class="card">
     <div class="card-header">
-      <div class="card-title">
-        {{ 'Activity' | translate }}
-      </div>
-      <div class="btn-group btn-group-toggle mt-md-0 mt-1" ngbRadioGroup name="radioBasic" [(ngModel)]="activityDays">
+      <h5 class="card-title">{{ 'Rating' | translate }}</h5>
+      <div class="btn-group btn-group-toggle mt-md-0 mt-1" ngbRadioGroup name="radioBasic"
+           [(ngModel)]="topRatingOption">
         <label class="btn btn-sm btn-outline-primary" ngbButtonLabel rippleEffect>
-          <input (click)="activityDataUpdate(7)" type="radio" name="last_days_option" id="last_days_option_1"
-            [value]="7" ngbButton />
-          <span>7</span>
+          <input (click)="loadTopRating(1)" type="radio" name="top-rating" id="top-rating-1" [value]="1" ngbButton />
+          <span>{{ 'Today' | translate }}</span>
         </label>
         <label class="btn btn-sm btn-outline-primary" ngbButtonLabel rippleEffect>
-          <input (click)="activityDataUpdate(14)" type="radio" name="last_days_option" id="last_days_option_2"
-            [value]="14" ngbButton />
-          <span>14</span>
+          <input (click)="loadTopRating(2)" type="radio" name="top-rating" id="top-rating-1" [value]="2" ngbButton />
+          <span>{{ 'Week' | translate }}</span>
         </label>
         <label class="btn btn-sm btn-outline-primary" ngbButtonLabel rippleEffect>
-          <input (click)="activityDataUpdate(30)" type="radio" name="last_days_option" id="last_days_option_3"
-            [value]="30" ngbButton />
-          <span>30</span>
+          <input (click)="loadTopRating(3)" type="radio" name="top-rating" id="top-rating-1" [value]="3" ngbButton />
+          <span>{{ 'Month' | translate }}</span>
         </label>
       </div>
     </div>
-    <div class="card-body">
-      <div class="text-center mt-2 mb-2">
-        <div class="avatar bg-primary p-50 m-0 mb-1">
-          <div class="avatar-content">
-            <i data-feather="check-circle" class="font-medium-5"></i>
-          </div>
-        </div>
-        <h2 class="font-weight-bolder">{{ activitySolved }}</h2>
-        <p class="mb-0 line-ellipsis">{{ 'Problem' | translate }}</p>
-      </div>
 
-      <apex-chart *ngIf="activityChart" [options]="activityChart"></apex-chart>
-    </div>
-    <div class="card-footer text-center">
-      <a class="btn btn-primary bg-primary badge-glow btn-sm round" routerLink="profile">
-        {{ 'DetailedStatistics' | translate }}
-        <i data-feather="arrow-right"></i>
-      </a>
-    </div>
-  </div>
-</div>
-
-<div class="card">
-  <div class="card-header">
-    <h5 class="card-title">{{ 'Rating' | translate }}</h5>
-    <div class="btn-group btn-group-toggle mt-md-0 mt-1" ngbRadioGroup name="radioBasic"
-      [(ngModel)]="topRatingOption">
-      <label class="btn btn-sm btn-outline-primary" ngbButtonLabel rippleEffect>
-        <input (click)="loadTopRating(1)" type="radio" name="top-rating" id="top-rating-1" [value]="1" ngbButton />
-        <span>{{ 'Today' | translate }}</span>
-      </label>
-      <label class="btn btn-sm btn-outline-primary" ngbButtonLabel rippleEffect>
-        <input (click)="loadTopRating(2)" type="radio" name="top-rating" id="top-rating-1" [value]="2" ngbButton />
-        <span>{{ 'Week' | translate }}</span>
-      </label>
-      <label class="btn btn-sm btn-outline-primary" ngbButtonLabel rippleEffect>
-        <input (click)="loadTopRating(3)" type="radio" name="top-rating" id="top-rating-1" [value]="3" ngbButton />
-        <span>{{ 'Month' | translate }}</span>
-      </label>
-    </div>
-  </div>
-
-  <div class="table-responsive">
-    <table class="table top-rating-table">
-      <thead>
+    <div class="table-responsive">
+      <table class="table top-rating-table">
+        <thead>
         <tr class="bg-gradient-primary">
           <th class="text-center text-white">#</th>
           <th class="text-white">
@@ -75,8 +76,8 @@
           </th>
           <th class="text-center text-white"><i [data-feather]="'rating' | iconName"></i></th>
         </tr>
-      </thead>
-      <tbody>
+        </thead>
+        <tbody>
         <tr *ngFor="let rating of topRating; index as i">
           <td class="text-center text-dark">
             {{ i+1 }}
@@ -90,26 +91,26 @@
             </span>
           </td>
         </tr>
-      </tbody>
-    </table>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="card-footer text-center">
+      <a class="btn btn-primary bg-primary badge-glow btn-sm round" routerLink="rating">
+        {{ 'OverallRating' | translate }}
+        <i data-feather="arrow-right"></i>
+      </a>
+    </div>
+
   </div>
 
-  <div class="card-footer text-center">
-    <a class="btn btn-primary bg-primary badge-glow btn-sm round" routerLink="rating">
-      {{ 'OverallRating' | translate }}
-      <i data-feather="arrow-right"></i>
-    </a>
-  </div>
+  <div class="card" *ngIf="currentUser">
+    <div class="card-header">
+      <div class="card-title">{{ 'LastAttempts' | translate }}</div>
+    </div>
 
-</div>
-
-<div class="card" *ngIf="currentUser">
-  <div class="card-header">
-    <div class="card-title">{{ 'LastAttempts' | translate }}</div>
-  </div>
-
-  <table class="table attempts">
-    <thead class="bg-gradient-primary">
+    <table class="table attempts">
+      <thead class="bg-gradient-primary">
       <tr>
         <th class="ml-50 text-white">
           <i class="mr-50" [data-feather]="'problem' | iconName"></i>
@@ -120,8 +121,8 @@
           {{ 'Verdict' | translate }}
         </th>
       </tr>
-    </thead>
-    <tbody>
+      </thead>
+      <tbody>
       <tr *ngFor="let attempt of lastAttempts">
         <td class="ml-50">
           <a [routerLink]="['/practice', 'problems', 'problem', attempt.problemId]">
@@ -140,13 +141,15 @@
           </div>
         </td>
       </tr>
-    </tbody>
-  </table>
+      </tbody>
+    </table>
 
-  <div class="card-footer text-center">
-    <a class="btn btn-primary bg-primary badge-glow btn-sm round" routerLink="attempts">
-      {{ 'AllAttempts' | translate }}
-      <i data-feather="arrow-right"></i>
-    </a>
+    <div class="card-footer text-center">
+      <a class="btn btn-primary bg-primary badge-glow btn-sm round" routerLink="attempts">
+        {{ 'AllAttempts' | translate }}
+        <i data-feather="arrow-right"></i>
+      </a>
+    </div>
   </div>
+
 </div>
