--- a/src/app/modules/problems/pages/problems/sections/section-study-plans/section-study-plans.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-study-plans/section-study-plans.component.html
@@ -1,8 +1,11 @@
 <h3 *ngIf="studyPlans.length > 0" class="text-white d-md-block d-none">
   {{ 'StudyPlans' | translate }}
 </h3>
-<div class="row mt-2">
-  <div class="col-lg-4 col-md-6 col-sm-12" *ngFor="let studyPlan of studyPlans">
-    <study-plan-card [studyPlan]="studyPlan"></study-plan-card>
+
+<swiper [config]="swiperConfig" class="mt-2 swiper-lazy-loading">
+  <div class="swiper-wrapper">
+    <div class="swiper-slide" *ngFor="let studyPlan of studyPlans">
+      <study-plan-card [studyPlan]="studyPlan"></study-plan-card>
+    </div>
   </div>
-</div>
+</swiper>
