--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,8 +3,9 @@
 @import '@core/scss/core.scss';
 @import './assets/scss/styles';
 
-@import 'app/languages.scss';
-@import 'app/chapters.scss';
+@import 'app/colors/study-plans.scss';
+@import 'app/colors/languages.scss';
+@import 'app/colors/chapters.scss';
 
 @import "~highlight.js/styles/vs.css";
 
