--- a/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
@@ -9,7 +9,7 @@
   </div>
 
   <h2 [@fadeInUpOnEnter] class="mt-1 text-white">{{ 'Problems' | translate }}</h2>
-  <h5 [@fadeInUpOnEnter] class="mt-2 text-white">Practice and improve your skills</h5>
+  <h5 [@fadeInUpOnEnter] class="mt-2 text-white">{{ 'ProblemsPageTitleText' | translate }}</h5>
 
   <div class="mt-4 col-lg-8 col-12 offset-lg-2 offset-0">
     <div class="row">
