--- a/src/app/modules/problems/pages/problems/problems.component.scss
+++ b/src/app/modules/problems/pages/problems/problems.component.scss
@@ -12,8 +12,19 @@
 ::ng-deep .problems-sidebar {
   width: 400px;
   right: -400px;
+
+  @include media-breakpoint-down(sm) {
+    width: calc(100% - 40px);
+    right: calc(40px - 100%);
+  }
+
+  background-color: white;
+
+  @include dark-layout {
+    background-color: black;
+  }
+
   padding: 0;
-  background-color: $white;
   z-index: 1051;
   position: fixed;
   top: 0;
@@ -26,11 +37,6 @@
   &.show {
     box-shadow: 0 15px 30px 0 rgba($black, 0.11), 0 5px 15px 0 rgba($black, 0.08);
     right: 0;
-  }
-
-  .content {
-    position: relative;
-    height: 100%;
   }
 
   .btn-toggle {
@@ -50,31 +56,4 @@
     cursor: pointer;
   }
 
-  // theme color box styles
-  .color-box {
-    height: 24px;
-    width: 24px;
-    margin: 0.5rem;
-    border-radius: 0.5rem;
-    cursor: pointer;
-    position: relative;
-    &.selected {
-      &:after {
-        content: '';
-        border: 1px solid $primary;
-        height: 30px;
-        width: 30px;
-        top: -3px;
-        left: -3px;
-        position: absolute;
-        border-radius: 0.5rem;
-      }
-      &.border {
-        &:after {
-          top: -4px;
-          left: -4px;
-        }
-      }
-    }
-  }
 }
