--- a/src/app/shared/components/code-editor/code-editor-modal/code-editor-modal.component.scss
+++ b/src/app/shared/components/code-editor/code-editor-modal/code-editor-modal.component.scss
@@ -1,3 +1,9 @@
+@import 'bootstrap/scss/functions';
+@import 'bootstrap/scss/mixins';
+@import 'bootstrap/scss/variables';
+@import '@core/scss/base/bootstrap-extended/variables';
+@import 'bootstrap/scss/mixins/dark-layout';
+
 .editor-button {
   position: fixed;
   bottom: 5%;
@@ -16,4 +22,53 @@
   svg {
     color: #000;
   }
+}
+
+
+.code-editor-sidebar {
+  width: 50%;
+  right: -50%;
+  padding: 0;
+  background-color: $white;
+  z-index: 1051;
+  position: fixed;
+  top: 5%;
+  height: 90%;
+  transition: right 0.4s cubic-bezier(0.05, 0.74, 0.2, 0.99);
+  backface-visibility: hidden;
+  border-left: 1px solid rgba($black, 0.05);
+
+  @include media-breakpoint-down(sm) {
+    width: 75%;
+    right: -75%;
+  }
+
+  &.show {
+    box-shadow: 0 15px 30px 0 rgba($black, 0.11), 0 5px 15px 0 rgba($black, 0.08);
+    right: 0;
+  }
+
+  .btn-toggle {
+    background: $dark;
+    color: $white !important;
+
+    @include dark-layout {
+      background: $light !important;
+      color: $dark !important;
+    }
+
+    display: block;
+    box-shadow: -3px 0px 8px rgba($black, 0.1);
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+    position: absolute;
+    top: 50%;
+    width: 38px;
+    height: 38px;
+    left: -39px;
+    text-align: center;
+    line-height: 40px;
+    cursor: pointer;
+  }
+
 }
