add swipeService && experimental code editor swipe

--- a/src/app/modules/problems/pages/problems/sections/section-problems-table/section-problems-table.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-problems-table/section-problems-table.component.html
@@ -8,6 +8,7 @@
               [value]="ordering"
               [justifyContent]="'start'"
               [ordering]="'id'"
+              [reverse]="true"
               (change)="changeOrdering($event)">
               <div class="align-middle">
                 <i class="mr-50" [data-feather]="'problem' | iconName"></i>
