--- a/src/app/shared/components/code-editor/code-editor-modal/code-editor-modal.component.scss
+++ b/src/app/shared/components/code-editor/code-editor-modal/code-editor-modal.component.scss
@@ -26,17 +26,21 @@
 
 
 .code-editor-sidebar {
-  width: 50%;
-  right: -50%;
+  width: 60%;
+  right: -60%;
   padding: 0;
-  background-color: $white;
+  background-color: inherit;
   z-index: 1051;
   position: fixed;
   top: 5%;
-  height: 90%;
+  height: 660px;
   transition: right 0.4s cubic-bezier(0.05, 0.74, 0.2, 0.99);
   backface-visibility: hidden;
   border-left: 1px solid rgba($black, 0.05);
+
+  @media screen and (max-height: 700px) {
+    height: 90%;
+  }
 
   @include media-breakpoint-down(sm) {
     width: 75%;
@@ -71,4 +75,13 @@
     cursor: pointer;
   }
 
+  .card {
+    .card-header {
+      padding: 1rem !important;
+    }
+
+    .card-body {
+      padding: 0 0.5rem 0 0;
+    }
+  }
 }
