code editor validation max length change && text-right to memory limit text

--- a/src/app/modules/problems/pages/problem/problem-sidebar/problem-sidebar-info/problem-sidebar-info.component.html
+++ b/src/app/modules/problems/pages/problem/problem-sidebar/problem-sidebar-info/problem-sidebar-info.component.html
@@ -5,7 +5,7 @@
       {{ 'TIME_LIMIT' | translate }}
     </h5>
 
-    <h5>
+    <h5 class="text-right">
       <i data-feather="hard-drive" class="text-primary"></i>
       {{ 'MEMORY_LIMIT' | translate }}
     </h5>
