--- a/src/app/layout/components/navbar/navbar-daily-tasks/navbar-daily-tasks.component.scss
+++ b/src/app/layout/components/navbar/navbar-daily-tasks/navbar-daily-tasks.component.scss
@@ -1,3 +1,6 @@
+@import '@core/scss/base/bootstrap-extended/variables';
+@import 'bootstrap/scss/mixins';
+
 ::ng-deep .daily-tasks-popover .popover-body {
   padding: 0px !important;
   width: 277px !important;
@@ -17,12 +20,13 @@ a {
   margin-bottom: 0px !important;
   box-shadow: 0 4px 6px 0 rgb(85 85 85 / 9%), 0 1px 20px 0 rgb(0 0 0 / 8%), 0px 1px 11px 0px rgb(0 0 0 / 6%) !important;
   transition: all 0.2s ease;
-  background-image: linear-gradient(42.32deg, #2b2665, #393575, #463caa) !important;
+  background-image: linear-gradient(to right, $primary, mix(white, $primary, 10)) !important;
+  opacity: 0.9;
   background-repeat: repeat;
 }
 
 ::ng-deep .dark-layout .bg-daily-tasks {
-  background-image: none;
+  background-image: linear-gradient(to right, mix(black, $primary, 60), mix(black, $primary, 40)) !important;
 }
 
 .list-group-item {
@@ -30,7 +34,7 @@ a {
 }
 
 .media:hover {
-  background-image: linear-gradient(42.32deg, #7367f0, #978EF8) !important;
+  background-color: mix(white, $primary, 20) !important;
 }
 
 .color-daily-tasks {
