table striped fix

--- a/src/app/modules/problems/pages/rating/rating.component.html
+++ b/src/app/modules/problems/pages/rating/rating.component.html
@@ -5,8 +5,8 @@
 
     <section class="mt-2">
       <div class="card">
-        <div class="custom-table table-striped table-responsive">
-          <table class="table">
+        <div class="custom-table table-responsive">
+          <table class="table table-striped">
             <thead>
             <tr class="bg-gradient-primary">
               <th>#</th>
