--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@
 @import 'app/colors/study-plans.scss';
 @import 'app/colors/languages.scss';
 @import 'app/colors/chapters.scss';
+@import 'app/colors/contests.scss';
 
 @import "~highlight.js/styles/vs.css";
 
