--- a/src/app/modules/contests/contests.colors.scss
+++ b/src/app/modules/contests/contests.colors.scss
@@ -5,10 +5,10 @@
 
 .contests-colors {
   --text-color: #fff;
-  --bg-gradient: linear-gradient(42.32deg, $default, mix(white, $default, 10));
-  --bg: $default;
+  --bg-gradient: linear-gradient(42.32deg, #7367f0, #978EF8);
+  --bg: #7367f0;
   --bg-light: rgb(115, 103, 240, 0.1);
-  --box-shadow: 0px 0px 10px $default;
+  --box-shadow: 0px 0px 10px #7367f0;
 
   &.contest-254 {
     --bg-gradient: linear-gradient(to right, #38CCBC, #07e4cf);
@@ -114,7 +114,7 @@
 }
 
 ::ng-deep .dark-layout .contests-colors {
-  --bg-gradient: linear-gradient(mix(black, $primary, 60), mix(black, $primary, 40));
+  --bg-gradient: linear-gradient(42.32deg, #2b2665, #393575, #463caa);
 
   &.contest-254 {
     --bg: #037166;
