--- a/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
@@ -12,9 +12,18 @@
   <h5 [@fadeInUpOnEnter] class="mt-2 text-white">{{ 'ProblemsPageTitleText' | translate }}</h5>
 
   <div [@fadeInUpOnEnter] class="mt-2">
-    <a routerLink="rating" class="btn btn-primary mr-md-1">{{ 'Rating' | translate }}</a>
-    <a routerLink="profile" class="btn btn-primary mr-md-1">{{ 'Profile' | translate }}</a>
-    <a routerLink="attempts" class="btn btn-primary">{{ 'Attempts' | translate }}</a>
+    <a routerLink="rating" class="btn btn-primary mr-md-1 mr-25">
+      <i [data-feather]="'rating' | iconName"></i>
+      {{ 'Rating' | translate }}
+    </a>
+    <a routerLink="profile" class="btn btn-primary mr-md-1 mr-25">
+      <i [data-feather]="'user' | iconName"></i>
+      {{ 'Profile' | translate }}
+    </a>
+    <a routerLink="attempts" class="btn btn-primary">
+      <i [data-feather]="'attempt' | iconName"></i>
+      {{ 'Attempts' | translate }}
+    </a>
   </div>
 
   <div class="mt-2 col-lg-8 col-12 offset-lg-2 offset-0">
