--- a/src/app/modules/home/statistics-section/statistics-section.component.scss
+++ b/src/app/modules/home/statistics-section/statistics-section.component.scss
@@ -1,13 +1,13 @@
 @import 'bootstrap/scss/mixins'; 
 @import 'bootstrap/scss/functions';
-@import 'bootstrap/scss/variables';
+@import '@core/scss/base/bootstrap-extended/variables';
 
 .footer {
   position: absolute;
   height: 200px;
   margin-left: -2rem;
   width: calc(100% + 2rem);
-  background: linear-gradient(-45deg, #463caa, #7367f0, #8a80f3, rgba(115, 103, 240, 0.7));
+  background: linear-gradient(-45deg, mix(black, $primary, 10), $primary, mix(white, $primary, 15), mix(white, $primary, 30));
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
 
@@ -80,7 +80,7 @@
 
 ::ng-deep .dark-layout {
   .footer {
-    background: linear-gradient(45deg, #2b2665, #393575, #463caa) !important;
+    background: linear-gradient(45deg, mix(black, $primary, 60), mix(black, $primary, 40), mix(black, $primary, 20), $primary);
 
     svg {
       stroke: #161d31 !important;
