add problem1870 component & refactoring problem-body

--- a/src/app/modules/problems/components/problem-body/problem-body.component.html
+++ b/src/app/modules/problems/components/problem-body/problem-body.component.html
@@ -110,3 +110,5 @@
   <mathjax class="mt-2" [content]="problem.comment"></mathjax>
   <hr>
 </ng-container>
+
+<problem1870 *ngIf="problem.id == 1870"></problem1870>
