update routerLink of contest-card-big

--- a/src/app/modules/contests/components/contest-card/contest-card-big/contest-card-big.component.html
+++ b/src/app/modules/contests/components/contest-card/contest-card-big/contest-card-big.component.html
@@ -1,5 +1,5 @@
 <div [@fadeInOnEnter] class="card contests-colors contest-{{ contest.id }} {{ contest.title }} contest-type-{{ contest.type }}">
-  <a [routerLink]="['/competitions', 'contests', 'contest', contest.id]">
+  <a [routerLink]="routerLink">
     <div *ngIf="contest.logo" class="card-bg" style="background-image: url('{{ contest.logo }}');">
     </div>
 
