change contestant points badge color

--- a/src/app/modules/contests/pages/contest/contest-standings/contest-standings.component.scss
+++ b/src/app/modules/contests/pages/contest/contest-standings/contest-standings.component.scss
@@ -68,7 +68,7 @@ thead tr {
 }
 
 span.points {
-  background: var(--bg-gradient) !important;
+  background: var(--bg) !important;
   box-shadow: var(--box-shadow) !important;
   color: var(--text-color);
 }
