--- a/src/app/colors/contests.scss
+++ b/src/app/colors/contests.scss
@@ -187,6 +187,10 @@
     --box-shadow: 0 0 10px #1c25c1;
   }
 
+  &[class*="contest-type-CodeGolf"] {
+    --bg-gradient: linear-gradient(45deg, rgba(45, 75, 36, 0.92), rgba(77, 126, 62, 0.87));
+  }
+
 }
 
 .contests-colors {
@@ -233,4 +237,5 @@
     border-color: var(--bg);
     background-color: var(--bg);
   }
+
 }
