--- a/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.scss
+++ b/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.scss
@@ -40,14 +40,13 @@
 
 .results {
   z-index: 1000;
-  background-image: linear-gradient(47deg, #1c1368, #9e95f5);
   border: none;
-  box-shadow: 0 0 10px #9e95f5;
   border-radius: 10px;
+  margin-bottom: 1rem;
 
   position: fixed;
   left: 2rem;
-  bottom: 2rem;
+  bottom: 0;
 
   .result {
     padding: 5px;
@@ -111,4 +110,21 @@
   &:hover {
     background: var(--bg-gradient) !important;
   }
+}
+
+span.points {
+  background: var(--bg) !important;
+  box-shadow: var(--box-shadow) !important;
+  color: var(--text-color);
+}
+
+::ng-deep span.problem-points {
+  background: var(--bg-light) !important;
+  color: var(--bg);
+}
+
+::ng-deep span.problem-points.the-best {
+  background: var(--bg) !important;
+  box-shadow: var(--box-shadow) !important;
+  color: var(--text-color);
 }
